SONARJAVA-3462: Changes from review v2
* Test issue location
* Change isStringLiteralCommandValid parameter name
* Report issue on identifiers that are explicitly or effectively final